Fix the spacing in between the heading in about us section

--- a/styles.css
+++ b/styles.css
@@ -717,7 +717,7 @@ ol {
   height: auto;
 }
 .services-card {
-  width: 600px;
+  width: 580px;
   height: 450px;
   perspective: 1000px;
   margin: 15px;
